After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 665249 - Fix compiler warnings
Fix compiler warnings
Status: RESOLVED FIXED
Product: gobject-introspection
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gobject-introspection Maintainer(s)
gobject-introspection Maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2011-11-30 21:40 UTC by Jasper St. Pierre (not reading bugmail)
Modified: 2015-02-07 16:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gibaseinfo: Fix compiler warnings (971 bytes, patch)
2011-11-30 21:40 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
gitypelib: Fix compiler warnings (1.95 KB, patch)
2011-11-30 21:40 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Jasper St. Pierre (not reading bugmail) 2011-11-30 21:40:10 UTC
A quick two fixes. See patches.
Comment 1 Jasper St. Pierre (not reading bugmail) 2011-11-30 21:40:12 UTC
Created attachment 202483 [details] [review]
gibaseinfo: Fix compiler warnings

g_slice_free complains when you pass it a pointer of a different type
than it was expecting, like it should.
Comment 2 Jasper St. Pierre (not reading bugmail) 2011-11-30 21:40:15 UTC
Created attachment 202484 [details] [review]
gitypelib: Fix compiler warnings

These variables are unused.
Comment 3 Colin Walters 2011-11-30 22:51:00 UTC
Review of attachment 202483 [details] [review]:

Looks right.
Comment 4 Colin Walters 2011-11-30 23:51:04 UTC
Review of attachment 202484 [details] [review]:

Hm, they were clearly used for something before...

It looks like the is_method variable's use was removed in:
commit efbd75f72262e0194528e00508fb528497f58845
Author: Colin Walters <walters@src.gnome.org>
Date:   Thu Oct 2 21:24:20 2008 +0000

    Merge branch 'bug552961-methods/wip'
    
    svn path=/trunk/; revision=647

Looking at the bug...yeah, we don't need it anymore.  But I'd like to see a bit of research like this, sometimes unused variables are unused because of a bug or a bad merge, etc.
Comment 5 Colin Walters 2011-11-30 23:54:16 UTC
For reference, a quick: git log -S 'if (is_method' was likely to turn this kind of thing up.
Comment 6 Jasper St. Pierre (not reading bugmail) 2011-12-01 15:55:37 UTC
Attachment 202483 [details] pushed as b845f9d - gibaseinfo: Fix compiler warnings
Attachment 202484 [details] pushed as 8b460b3 - gitypelib: Fix compiler warnings
Comment 7 André Klapper 2015-02-07 16:44:06 UTC
[Mass-moving gobject-introspection tickets to its own Bugzilla product - see bug 708029. Mass-filter your bugmail for this message: introspection20150207 ]