gibaseinfo: Fix compiler warnings

g_slice_free complains when you pass it a pointer of a different type
than it was expecting, like it should.

https://bugzilla.gnome.org/show_bug.cgi?id=665249